Refactor booking,...